--- a/build.gradle
+++ b/build.gradle
@@ -11,9 +11,9 @@ buildscript {
     }
 }
 
-plugins {
-    id "com.jfrog.bintray" version "1.7.3"
-}
+//plugins {
+//    id "com.jfrog.bintray" version "1.7.3"
+//}
 
 allprojects {
     repositories {
