--- a/pushdown-anim-click/build.gradle
+++ b/pushdown-anim-click/build.gradle
@@ -1,38 +1,13 @@
 apply plugin: 'com.android.library'
 
-ext {
-    bintrayRepo = 'TheKhaeng'
-    bintrayName = 'pushdown-anim-click'
-
-    publishedGroupId = 'com.github.thekhaeng'
-    libraryName = 'PushDownAnimClick'
-    artifact = 'pushdown-anim-click'
-
-    libraryDescription = 'A library for Android developers who want to create "push down animation click" for view like spotify application.'
-
-    siteUrl = 'https://github.com/TheKhaeng/pushdown-anim-click'
-    gitUrl = 'https://github.com/TheKhaeng/pushdown-anim-click.git'
-    githubRepository= 'TheKhaeng/pushdown-anim-click'
-
-    libraryVersion = '1.0.7'
-
-    developerId = 'nonthawit'
-    developerName = 'Nonthawit Doungsodsri'
-    developerEmail = 'nonthawit.thekhaeng@gmail.com'
-
-    licenseName = 'The Apache Software License, Version 2.0'
-    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-    allLicenses = ["Apache-2.0"]
-}
-
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.2"
+    compileSdkVersion 27
+    buildToolsVersion "27.0.3"
 
 
     defaultConfig {
         minSdkVersion 15
-        targetSdkVersion 26
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0.7"
 
@@ -50,9 +25,8 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:26.1.0'
+    compile 'com.android.support:appcompat-v7:27.1.0'
 }
 
-apply from: 'https://raw.githubusercontent.com/nisrulz/JCenter/master/installv1.gradle'
-apply from: 'https://raw.githubusercontent.com/nisrulz/JCenter/master/bintrayv1.gradle'
+apply from: "$project.rootDir/pushlibrary.gradle"
 
